--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@400;700&display=swap');
+
 body {
     margin: 100px;
     background: #eee;
-    font-family: Verdana;
+    font-family: 'Dosis', sans-serif;
+    font-weight: 400;
+    color: #333;
 }
 
 /* Card */
@@ -47,7 +51,7 @@ body {
 }
 
 /* Open Card */
-.card-open .left-card {
+.card.open .left-card {
     transform: rotateY(-180deg);
 }
 
@@ -60,13 +64,14 @@ body {
     padding: 30px;
     box-sizing: border-box;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
-    color: #444;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 0;
+    cursor: pointer;
 }
 
 .right-card h2 {
     color: crimson;
+    font-weight: 700;
 }
