--- a/css/style.css
+++ b/css/style.css
@@ -75,3 +75,14 @@ body {
     color: crimson;
     font-weight: 700;
 }
+
+/* Dispositivos pequeños */
+@media only screen and (max-width: 375px) {
+    
+    body {
+        position: relative;
+        left: 30px;
+        top: 200px;
+        transform: translate(-50%, -50%); 
+    }
+}
