Nuevos cambios responsive

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,36 @@ body {
 }
 
 /* Dispositivos pequeños */
+@media only screen and (max-width: 500px) {
+    
+    body {
+        position: relative;
+        left: 150px;
+        top: 200px;
+        transform: translate(-50%, -50%); 
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    
+    body {
+        position: relative;
+        left: 100px;
+        top: 200px;
+        transform: translate(-50%, -50%); 
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    
+    body {
+        position: relative;
+        left: 50px;
+        top: 250px;
+        transform: translate(-50%, -50%); 
+    }
+}
+
 @media only screen and (max-width: 375px) {
     
     body {
